fixed bug where about us circles were not centered at 400px or below

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -501,3 +501,18 @@ input:focus {
     }
 }
 
+/*screens 340px or less*/
+@media screen and (max-width:340px){
+    .circle {
+            position: relative;
+            left: -36px;
+        }
+}
+
+/*screens 320px*/
+@media screen and (max-width:320px){
+    .circle {
+            position: relative;
+            left: -50px;
+        }
+}
